移动版细节调整12.16

--- a/论坛项目/static/forum/css/m_css/m_base.css
+++ b/论坛项目/static/forum/css/m_css/m_base.css
@@ -163,3 +163,6 @@ nav a:active,nav a:hover,nav a:focus,nav a:visited{
     height: 40px;
     border-radius: 20px;
 }
+#needmessage{
+    border: 1px solid #ccc;
+}
