--- a/论坛项目/template/forum/touch/forum/forumdisplay_fastpost.htm
+++ b/论坛项目/template/forum/touch/forum/forumdisplay_fastpost.htm
@@ -19,7 +19,7 @@
 		<li id="fastpostsubmitline" style="display:none;">
 			<!--{if $secqaacheck || $seccodecheck}-->
 			<!--{subtemplate common/seccheck}--><!--{/if}-->
-			<input type="button" value="{lang reply}" class="button2" name="replysubmit" id="fastpostsubmit"> 
+			<input type="button" value="{lang reply}" class="reply-btn" name="replysubmit" id="fastpostsubmit"> 
  
 			<!--{hook/viewthread_fastpost_button_mobile}--></li>
 		</ul>
