--- a/论坛项目/template/forum/touch/forum/viewthread.htm
+++ b/论坛项目/template/forum/touch/forum/viewthread.htm
@@ -52,7 +52,7 @@
 				| <em><a href="home.php?mod=spacecp&ac=favorite&type=thread&id=$_G[tid]" class="favbtn blue" 
 					<!--{if $_G[forum][ismoderator]}-->style="margin-right:10px;"<!--{/if}-->>{lang favorite}</a></em>
 				<i class="fa fa-eye" aria-hidden="true"></i>$post[views]
-				<i class="fa fa-commenting fa-magin" aria-hidden="true"></i>$post[allreplies]
+				<i class="fa fa-commenting fa-magin" aria-hidden="true"></i>$post[replies]  	
 			</div>
 		</div> 
 				<div class="posted_content">
