--- a/论坛项目/template/forum/touch/home/spacecp_pm.htm
+++ b/论坛项目/template/forum/touch/home/spacecp_pm.htm
@@ -11,7 +11,7 @@
 <!-- header start -->
 <header class="header">
     <div class="nav">
-		<span class="y"><button id="pmsubmit_btn" class="btn_pn btn_pn_grey" disable="true"><span>{lang sendpm}</span></button></span>
+		<span class="y"><button id="pmsubmit_btn" class="reply-btn" disable="true"><span>{lang sendpm}</span></button></span>
 		<input type="hidden" name="pmsubmit_btn" value="yes" />
         <a href="home.php?mod=space&do=pm" class="z"><img src="{STATICURL}image/mobile/images/icon_back.png" /></a>
 		<span>{lang send_pm}</span>
