--- a/论坛项目/template/forum/common/footer.htm
+++ b/论坛项目/template/forum/common/footer.htm
@@ -58,19 +58,22 @@
 	<div class="footer">
 		<div class="code"> 
 			<img class="code_img" src="{$_G['own_static_path']}/img/code1.png" /> 
-			<img class="code_img" src="{$_G['own_static_path']}/img/code2.png" /> </div>
-		<ul class="footer_nav">
-			<li><a href="">一数官网</a></li>
-			<li><a href="">一数商城</a></li>
-			<li><a class="wechat"  href="">微信群</a></li>
-			<li><a class="qqgroup" href="">qq群</a></li>
-			<li><a href="技术支持.html">开发者论坛</a></li>
-		</ul>
-		<ul class="footer_bottom">
-			<li><a href="">一数社区</a></li>
-			<li><a class="line" href="">版权所有</a></li>
-			<li><a href="规则.html">社区规则</a></li>
-		</ul>
+			<img class="code_img" src="{$_G['own_static_path']}/img/code2.png" /> 
+		</div>
+				<ul class="footer_nav">
+						<li><a href="">一数官网</a></li>
+						<li><a href="">一数商城</a></li>
+						<li><a class="wechat"  href="">微信群</a></li>
+						<li><a class="qqgroup" href="">qq群</a></li>
+						<li><a href="技术支持.html">开发者论坛</a></li>
+						<li><a href="">一数社区</a></li>
+						<li><a  href="">版权所有</a></li>
+						<li class="bd_none"><a href="规则.html">社区规则</a></li>
+					</ul>
+		<div class="footer_bottom">
+				<img class="logo_white" src="{$_G['own_static_path']}/img/microblog_w.png"/>
+				Beijing ASU Tech Co.Ltd.北京一数科技有限公司 京ICP备15036919号-1
+		</div>
 	</div>
 	<!--  footer end -->
 	 
