--- a/论坛项目/template/forum/forum/discuz.htm
+++ b/论坛项目/template/forum/forum/discuz.htm
@@ -146,7 +146,7 @@
 		<!-- 主体右侧关注我们板块**开始 -->
 		<div class="contact_us">
 			<div class="contact_us_title">关注我们</div>
-			<div class="contact_us_con">
+			<div class="contact_us_con text-center">
 				<div class="clearfix microblog">
 					<div class="pull-left">
 						<img class="microblog_logo" src="{$_G['own_static_path']}/img/microblog.png">
