--- a/论坛项目/static/forum/css/base.css
+++ b/论坛项目/static/forum/css/base.css
@@ -212,8 +212,8 @@ ul.cl{
 
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, 
 .navbar-inverse .navbar-nav>.active>a:hover {
-	color: #fff;
-    background-color:rgb(254,112,60);
+	color:rgb(254,112,60);
+	background-color: inherit;
 }
 
 .code{
@@ -264,6 +264,7 @@ height:60px;
 margin-top:10px;
 padding: 4px 0;
 background-color:#fff;
+border: solid 1px #ddd;
 }
 .box_sign_left{
 width:50%;
@@ -433,7 +434,8 @@ i{
 	margin: 5px;
 }
 .navbar {
-    border: 1px;
+	border-top: 5px solid rgb(254,112,60);
+	border-bottom: none;
 }
 
 .code_img{
