--- a/论坛项目/template/forum/touch/forum/post.htm
+++ b/论坛项目/template/forum/touch/forum/post.htm
@@ -245,7 +245,7 @@
 			return false;
 		}
 
-		obj.attr('disable', 'true').removeClass('btn_pn_blue').addClass('btn_pn_grey');
+		//obj.attr('disable', 'true').removeClass('btn_pn_blue').addClass('btn_pn_grey');
 		popup.open('<img src="' + IMGDIR + '/imageloading.gif">');
 
 		var postlocation = '';
