--- a/论坛项目/template/forum/touch/common/footer.htm
+++ b/论坛项目/template/forum/touch/common/footer.htm
@@ -15,7 +15,7 @@
 		<!--{if !$_G[uid] && !$_G['connectguest']}-->
 		<a href="forum.php">{lang mobilehome}</a> | <a href="member.php?mod=logging&action=login" title="{lang login}">{lang login}</a> | <a href="<!--{if $_G['setting']['regstatus']}-->member.php?mod={$_G[setting][regname]}<!--{else}-->javascript:;" style="color:#D7D7D7;<!--{/if}-->" title="{$_G['setting']['reglinkname']}">{lang register}</a>
 		<!--{else}-->
-		<a href="home.php?mod=space&uid={$_G[uid]}&do=profile&mycenter=1">{$_G['member']['username']}</a> , <a href="member.php?mod=logging&action=logout&formhash={FORMHASH}" title="{lang logout}" class="dialog">{lang logout}</a>
+		<a href="home.php?mod=space&uid={$_G[uid]}&do=profile&mycenter=1">{$_G['member']['username']}</a>, <a href="member.php?mod=logging&action=logout&formhash={FORMHASH}" title="{lang logout}" class="dialog">{lang logout}</a>
 		<!--{/if}-->
 	</div>
     <div>
@@ -47,7 +47,7 @@
 			  </object> 登录
 		</a>
 		<!--{else}-->
-		<a class="col-xs-4 col-sm-4 act-grey" href="member.php?mod=logging&action=logout&formhash={FORMHASH}">
+		<a class="col-xs-4 col-sm-4 act-grey" href="<!--{if $_G[uid]}-->home.php?mod=space&uid=$_G[uid]&do=profile&mycenter=1<!--{else}-->member.php?mod=logging&action=login<!--{/if}-->">
 				<object class="icon-menu" data="{$_G['own_static_path']}/img/login.svg" type="image/svg+xml">
 				  </object> {$_G['member']['username']}
 		</a> 
