--- a/论坛项目/template/forum/touch/common/header.htm
+++ b/论坛项目/template/forum/touch/common/header.htm
@@ -28,7 +28,7 @@
     <!-- 页眉**开始 -->
     <header class="clearfix">
             <div class="pull-left"> 
-                <a href="forum.php?mod=guide&view=new&mobile=2"><img class="logo" alt="Brand" src="{$_G['own_static_path']}/img/logo-01.png"></a>一数社区
+                <a href="forum.php?mod=guide&view=new&mobile=2"><img class="logo" alt="Brand" src="{$_G['own_static_path']}/img/logo.png"></a>一数社区
             </div>
             <i class="fa fa-search fa-pull-right" aria-hidden="true"></i>
     </header>
