--- a/论坛项目/template/forum/touch/forum/forumdisplay.htm
+++ b/论坛项目/template/forum/touch/forum/forumdisplay.htm
@@ -77,7 +77,9 @@
 	</div>
 </div>
 <!--帖子列表**结束 -->
+<div class="text-center">
 $multipage
+</div>
 <!--{/if}-->
 <!-- main threadlist end -->
 <!--{hook/forumdisplay_bottom_mobile}-->
