--- a/论坛项目/template/forum/touch/home/space_favorite.htm
+++ b/论坛项目/template/forum/touch/home/space_favorite.htm
@@ -1,63 +1,44 @@
 <!--{template common/header}-->
-<!-- header start -->
-<header class="header">
-    <div class="nav">
-		<a href="home.php?mod=space&uid={$_G[uid]}&do=profile&mycenter=1" class="z"><img src="{STATICURL}image/mobile/images/icon_back.png" /></a>
-		<!--{if $_GET['type'] == 'forum'}-->
-		<span class="category">
-			<span class="display name vm" href="#subname_list">
-				<h2 class="tit">{lang favforum}</h2>
-				<img src="{STATICURL}image/mobile/images/icon_arrow_down.png" />
-			</span>
-	        <div id="subname_list" class="subname_list" display="true">
-				<ul>
-				<li><a href="home.php?mod=space&uid={$_G[uid]}&do=favorite&view=me&type=thread">{lang favthread}</a></li>
-				</ul>
-	        </div>
-		</span>
-		<!--{else}-->
-		<span class="category">
-			<span class="display name vm" href="#subname_list">
-				<h2 class="tit">{lang favthread}</h2>
-				<img src="{STATICURL}image/mobile/images/icon_arrow_down.png" />
-			</span>
-	        <div id="subname_list" class="subname_list" display="true">
-				<ul>
-				<li><a href="home.php?mod=space&uid={$_G[uid]}&do=favorite&view=me&type=forum">{lang favforum}</a></li>
-				</ul>
-	        </div>
-		</span>
-		<!--{/if}-->
-    </div>
-</header>
 
 <!-- main collectlist start -->
+<div class="container content">
 <!--{if $_GET['type'] == 'forum'}-->
 <div class="coll_list b_radius">
-	<ul>
+	<table>
 		<!--{if $list}-->
 			<!--{loop $list $k $value}-->
-			<li><a href="$value[url]">$value[title]</a></li>
+		    	<tr class="thread-tr"> 
+					<td>
+					  <img class="list-user-img-thread " src="uc_server/avatar.php?uid=$thread[authorid]&size=middle"/></td>
+					</td>
+			 
+			         <td class="thread-td"><a href="$value[url]">$value[title]</a></td>
+				</tr>
 			<!--{/loop}-->
 		<!--{else}-->
-		<li>{lang no_favorite_yet}</li>
+		<td>{lang no_favorite_yet}</td>
 		<!--{/if}-->
+		
 
-	</ul>
+	</table>
 </div>
 <!--{else}-->
 <div class="threadlist">
-	<ul>
+	<table class="hotlist">
 		<!--{if $list}-->
 			<!--{loop $list $k $value}-->
-			<li><a href="$value[url]">$value[title]</a></li>
+			<tr class="thread-tr"> 
+			 <td> <img class="list-user-img-thread " src="uc_server/avatar.php?uid=$value[authorid]&size=middle"/></td>
+			 <td class="thread-td"><a href="$value[url]">$value[title]</a></td>
+	     	</tr>
 			<!--{/loop}-->
 		<!--{else}-->
-		<li>{lang no_favorite_yet}</li>
+		<td>{lang no_favorite_yet}</td>
 		<!--{/if}-->
-	</ul>
+	</table>
 </div>
 <!--{/if}-->
+</div>
 <!-- main collectlist end -->
 $multi
 <!--{eval $nofooter = true;}-->
