--- a/论坛项目/template/forum/touch/home/space_profile.htm
+++ b/论坛项目/template/forum/touch/home/space_profile.htm
@@ -2,21 +2,24 @@
 	<!--{eval dheader('Location:member.php?mod=logging&action=login');exit;}-->
 <!--{/if}-->
 <!--{template common/header}-->
+<style>
+	.my_btn a{
+		margin: 0 auto;
+	}
+	.my_btn{
+		margin-left: 40%;
+        line-height: 30px;
+		margin-top: 10px;
+	}
+</style>
 <!--{if !$_GET['mycenter']}-->
 
-<!-- header start -->
-<header class="header">
-    <div class="nav">
-		<a href="javascript:;" onclick="history.go(-1);" class="z"><img src="{STATICURL}image/mobile/images/icon_back.png" /></a>
-		<span><!--{if $_G['uid'] == $space['uid']}-->{lang myprofile}<!--{else}-->$space[username]{lang otherprofile}<!--{/if}--></span>
-    </div>
-</header>
-<!-- header end -->
+
 <!-- userinfo start -->
 <div class="userinfo">
 	<div class="user_avatar">
 		<div class="avatar_m"><span><img src="<!--{avatar($space[uid], small, true)}-->" /></span></div>
-		<h2 class="name">$space[username]</h2>
+		<h2 class="orange" >$space[username]</h2>
 	</div>
 	<div class="user_box">
 		<ul>
@@ -29,38 +32,19 @@
 		</ul>
 	</div>
 	<!--{if $space['uid'] == $_G['uid']}-->
-	<div class="btn_exit"><a href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout_mobile}</a></div>
+	<div class="my_btn"><a href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout_mobile}</a></div>
 	<!--{/if}-->
 </div>
 <!-- userinfo end -->
 
 <!--{else}-->
 
-<!-- header start -->
-<header class="header">
-	<div class="hdc cl">
-		<!--{if $_G['setting']['domain']['app']['mobile']}-->
-			{eval $nav = 'http://'.$_G['setting']['domain']['app']['mobile'];}
-		<!--{else}-->
-			{eval $nav = "forum.php";}
-		<!--{/if}-->
-		<h2><a title="$_G[setting][bbname]" href="$nav"><img src="{STATICURL}image/mobile/images/logo.png" /></a></h2>
-		<ul class="user_fun">
-			<li><a href="search.php?mod=forum" class="icon_search">{lang search}</a></li>
-			<li><a href="forum.php?forumlist=1" class="icon_threadlist">{lang forum_list}</a></li>
-			<li class="on" id="usermsg"><a href="<!--{if $_G[uid]}-->home.php?mod=space&uid=$_G[uid]&do=profile&mycenter=1<!--{else}-->member.php?mod=logging&action=login<!--{/if}-->" class="icon_userinfo">{lang user_info}</a><!--{if $_G[member][newpm]}--><span class="icon_msg"></span><!--{/if}--></li>
-			<!--{if $_G['setting']['mobile']['mobilehotthread']}-->
-			<li><a href="forum.php?mod=guide&view=hot" class="icon_hotthread">{lang hot_thread}</a></li>
-			<!--{/if}-->
-		</ul>
-	</div>
-</header>
-<!-- header end -->
+ 
 <!-- userinfo start -->
 <div class="userinfo">
 	<div class="user_avatar">
 		<div class="avatar_m"><span><img src="<!--{avatar($_G[uid], small, true)}-->" /></span></div>
-		<h2 class="name">$_G[username]</h2>
+		<h2 class="orange" >$_G[username]</h2>
 	</div>
 	<div class="myinfo_list cl">
 		<ul>
