--- a/论坛项目/template/forum/touch/home/spacecp_pm.htm
+++ b/论坛项目/template/forum/touch/home/spacecp_pm.htm
@@ -1,4 +1,10 @@
 <!--{template common/header}-->
+<link rel="stylesheet" href="{$_G['own_static_path']}/css/m_css/m_publish.css">
+<style>
+	#username{
+		line-height: 30px;
+	}
+</style>
 <!--{if $op != ''}-->
 <div class="bm_c">{lang user_mobile_pm_error}</div>
 <!--{else}-->
@@ -8,18 +14,9 @@
 	<input type="hidden" name="pmsubmit" value="true" />
 	<input type="hidden" name="formhash" value="{FORMHASH}" />
 
-<!-- header start -->
-<header class="header">
-    <div class="nav">
-		<span class="y"><button id="pmsubmit_btn" class="reply-btn" disable="true"><span>{lang sendpm}</span></button></span>
-		<input type="hidden" name="pmsubmit_btn" value="yes" />
-        <a href="home.php?mod=space&do=pm" class="z"><img src="{STATICURL}image/mobile/images/icon_back.png" /></a>
-		<span>{lang send_pm}</span>
-    </div>
-</header>
-<!-- header end -->
+ 
 <!-- main post_msg_box start -->
-<div class="wp">
+<div class="content">
 	<div class="post_msg_from">
 		<ul>
 			<!--{if !$touid}-->
@@ -31,6 +28,7 @@
 		</ul>
 	</div>
 </div>
+<span  ><button id="pmsubmit_btn" class="reply-btn-grey btn_pn  " disable="true"><span>{lang sendpm}</span></button></span>
 <!-- main postbox start -->
 </form>
 <script type="text/javascript">
@@ -38,10 +36,10 @@
 		$('#sendmessage').on('keyup input', function() {
 			var obj = $(this);
 			if(obj.val()) {
-				$('.btn_pn').removeClass('btn_pn_grey').addClass('btn_pn_blue');
+				$('.btn_pn').removeClass('reply-btn-grey').addClass('reply-btn ');
 				$('.btn_pn').attr('disable', 'false');
 			} else {
-				$('.btn_pn').removeClass('btn_pn_blue').addClass('btn_pn_grey');
+				$('.btn_pn').removeClass('reply-btn ').addClass('reply-btn-grey');
 				$('.btn_pn').attr('disable', 'true');
 			}
 		});
