四个网页修改固定宽

--- a/论坛项目/template/forum/forum/discuz.htm
+++ b/论坛项目/template/forum/forum/discuz.htm
@@ -6,7 +6,7 @@
 	}
 </style>
 <!-- 主体内容左侧**开始 -->
-<div class="col-sm-7 col-md-8 col-lg-9 left">
+<div class="col-xs-9 left">
 	　
 
 	<!--{if empty($gid)}-->
@@ -60,7 +60,7 @@
 </div><!--   主体内容左侧**结束 -->  
  
 <!-- 主体内容右侧**开始 -->
-<div class="col-sm-5 col-md-4 col-lg-3 right">
+<div class="col-xs-3 right">
 		<!-- 搜索框**开始 -->
 		<form id="scbar_form" method="{if $_G[fid] && !empty($searchparams[url])}get{else}post{/if}" 
 		autocomplete="off" onsubmit="searchFocus($('scbartxt'))" 
