--- a/论坛项目/template/forum/forum/forumdisplay.htm
+++ b/论坛项目/template/forum/forum/forumdisplay.htm
@@ -7,7 +7,7 @@
 <style id="diy_style" type="text/css">
 </style>
 
-<div class=" col-sm-7 col-md-8 col-lg-9 cast_ii_left ">
+<div class=" col-xs-9 cast_ii_left ">
 	<div id="ct" class="cl{if $_G['forum']['allowside']} ct2{/if}"{if $leftside} style="margin-left:{$_G['leftsidewidth_mwidth']}px"{/if}>
 		<!--{if $leftside}-->
 			<div id="sd_bdl" class="bdl" onmouseover="showMenu({'ctrlid':this.id, 'pos':'dz'});" style="width:{$_G['setting']['leftsidewidth']}px;margin-left:-{$_G['leftsidewidth_mwidth']}px">
@@ -468,7 +468,7 @@
 </div><!-- left_warp -->
 
 <!-- sivan社区右 -->
-<div class="col-sm-5 col-md-4 col-lg-3 right">
+<div class="col-xs-3 right">
 	
 	    <!-- 搜索框**开始 -->
 		<form id="scbar_form" method="{if $_G[fid] && !empty($searchparams[url])}get{else}post{/if}" 
