--- a/论坛项目/template/forum/forum/post.htm
+++ b/论坛项目/template/forum/forum/post.htm
@@ -29,7 +29,7 @@
 		background-color: white;
 	}
 </style>
-<div class="left col-sm-7 col-md-8 col-lg-9">
+<div class="left col-xs-9">
 	<script type="text/javascript">
 		var allowpostattach = parseInt('{$_G['group']['allowpostattach']}');
 		var allowpostimg = parseInt('$allowpostimg');
@@ -453,7 +453,7 @@
 	<script type="text/javascript" src="{$_G['setting']['jspath']}at.js?{VERHASH}"></script>
 	<!--{/if}-->
 </div>
-<div class="right col-sm-5 col-md-4 col-lg-3">
+<div class="right col-xs-3">
                 <form>
                     <input type="text" class="search" placeholder="搜索" aria-describedby="basic-addon1">
                 </form>
