--- a/论坛项目/template/forum/forum/viewthread.htm
+++ b/论坛项目/template/forum/forum/viewthread.htm
@@ -1,5 +1,5 @@
 <!--{template common/header}-->
-<div class="left_warp col-sm-7 col-md-8 col-lg-9">
+<div class="left_warp col-xs-9">
 	<script type="text/javascript">var fid = parseInt('$_G[fid]'), tid = parseInt('$_G[tid]');</script>
 	<!--{if $modmenu['thread'] || $modmenu['post']}-->
 		<script type="text/javascript" src="{$_G['setting']['jspath']}forum_moderate.js?{VERHASH}"></script>
@@ -445,7 +445,7 @@
 		<!--[diy=diy3]--><div id="diy3" class="area"></div><!--[/diy]-->
 	</div>
 </div><!-- left_warp -->
-<div class="col-sm-5 col-md-4 col-lg-3 right">
+<div class="col-xs-3 right">
         <div class="recommend">
 			<div class="text-center">
 					<div class="avatar">
