--- a/论坛项目/template/forum/common/header.htm
+++ b/论坛项目/template/forum/common/header.htm
@@ -40,20 +40,14 @@
 <body>
 	<!-- [gls] menu start -->
 	 
-	<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation" >
-		<div class="container container_nav">
-		   <div class="row">
-				<div class="navbar-header"> 
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
+	<nav class="navbar navbar-fixed-top navbar-inverse">
+		<div class="container">
+			<div class="row">
+				<div class="navbar-header pull-left"> 
 					<a href="#"> <img class="logo" alt="Brand" src="{$_G['own_static_path']}/img/logo.png"> </a>
 				</div>
-				<div id="navbar" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
+				
+					<ul class="nav navbar-nav  pull-right">
 						<li {if !$_G['fid'] } class="active" {/if}><a href="forum.php?">论坛首页</a></li>
 						<li {if $_G['fid'] == 37 } class="active" {/if}><a href="forum.php?mod=forumdisplay&fid=37">Watch社区</a></li>
 						<li {if $_G['fid'] == 38 } class="active" {/if}><a href="forum.php?mod=forumdisplay&fid=38">活动</a></li>
@@ -110,8 +104,7 @@
 					
 					<!--{/if}-->
 					</ul>
-		       </div>
-		    </div><!-- row -->
+				</div>
 	    </div> <!--container-->
 	</nav>
 
