移动版，加筛选

--- a/论坛项目/static/forum/css/m_css/m_home.css
+++ b/论坛项目/static/forum/css/m_css/m_home.css
@@ -28,6 +28,7 @@
     }
     .dropdown-menu{
         min-width:min-content;
+        width:100%;
     }
     .dropdown-menu>li>a{
         padding:0 0 0 10px;
