--- a/论坛项目/static/forum/css/logged_in.css
+++ b/论坛项目/static/forum/css/logged_in.css
@@ -17,11 +17,10 @@
     display: none;
     background-color: rgb(62, 58, 57);
     position: absolute;
-    
-    width: 200px;
+    width: 166px;
     transform: translateX(-40%);
-    padding: 10px 0;
-    margin-top: 15px;
+    padding: 10px 15px;
+    margin-top: 18px;
 }
 
 #user_login_nav ul {
