--- a/论坛项目/template/forum/forum/post.htm
+++ b/论坛项目/template/forum/forum/post.htm
@@ -461,7 +461,7 @@
 			
                 <div class="recommend">
                     <div class="recommend_head">
-                        <h3 class="panel-title">今日推介<a class="navbar-right user_nub" style="color:#999;margin-right:5px;" href="#">更多 ></a></h3>
+                        <h3 class="panel-title">今日推介<a class="pull-right user_nub" style="color:#999;margin-right:5px;" href="#">更多 ></a></h3>
                     </div>
                     <div class="recommend_body">
                         <ul>
