--- a/线框图jpg/论坛_07_04/论坛_0705/css/manager.css
+++ b/线框图jpg/论坛_07_04/论坛_0705/css/manager.css
@@ -30,6 +30,9 @@ margin-right: 30px;
     padding: 2px 8px;
     margin-left: 8px;
 }
+a:hover{
+    text-decoration: none;
+}
 nav{
     background-color: rgb(80, 80, 80);
     height: 80px;
@@ -66,7 +69,6 @@ ul a{
     color: inherit;
 }
 ul a:hover{
-    text-decoration: none;
     color: inherit;
 }
 
