--- a/论坛项目/source/plugin/k_misign/template/hook_indexside.htm
+++ b/论坛项目/source/plugin/k_misign/template/hook_indexside.htm
@@ -73,23 +73,19 @@ border-left:#ddd solid 1px;
 	background-position:7px 8px
 }
 .midaben_con .visted .font {
-	font-size:20px;
-	line-height:25px;
-	width:60px;
-	left:40px;
-	top:8px;
-	text-shadow:0 1px 0 {$setting['hcolor']};
+	width: 50%;
+    font-size: 22px;
+    text-align: center
 }
 .midaben_con .visted .nums {
-	display:block;
-	font-size:12px;
-	width:56px;
-	text-align:center;
-	line-height:20px;
-	position:absolute;
-	color:#fff;
-	top:29px;
-	left:43px
+    display: block;
+    font-size: 12px;
+    width: 56px;
+    text-align: center;
+    line-height: 20px;
+    position: absolute; 
+	left: 62px;
+	color:#999;
 }
 .midaben_con .midaben_win {
 	width:205px;
@@ -161,7 +157,15 @@ border-left:#ddd solid 1px;
 .midaben_con a.midaben_signpanel:visited,.midaben_con a.visted:visited,.midaben_con a.visted:hover,.midaben_con a.visted:active {
 	background-color:{$setting['bcolor']}
 }
-
+<!--{if $qiandaodb['time'] >= $tdtime}-->
+.fa-sign{
+	margin-top: 5%;
+}
+<!--{else}-->
+.fa-sign{
+	margin-top: 10%;
+}
+<!--{/if}-->
 </style>
 <script type="text/javascript">
 function cjdsign(){
@@ -174,13 +178,14 @@ function cjdsign(){
 <div id="midaben_sign">
     <div class="midaben_con mbm box_sign">
         <a class="midaben_signpanel JD_sign<!--{if $qiandaodb['time'] >= $tdtime}--> visted<!--{/if}-->" id="JD_sign"<!--{if $qiandaodb['time'] >= $tdtime || !$_G['uid']}--> href="javascript:;" target="_blank"<!--{else}--> href="plugin.php?id=k_misign:sign&operation=qiandao&formhash={FORMHASH}" onclick="ajaxget(this.href, this.id, '', '', '', 'cjdsign();');return false;"<!--{/if}-->>
-            <div class="font">
-					<i class="fa fa-calendar-check-o" aria-hidden="true"></i>
-                <!--{if $qiandaodb['time'] >= $tdtime}-->{lang k_misign:signed}<!--{else}-->{lang k_misign:sign}<!--{/if}-->
+            <div class="font text-center">
+					<i class="fa fa-calendar-check-o fa-sign" aria-hidden="true"><!--{if $qiandaodb['time'] >= $tdtime}-->{lang k_misign:signed}<!--{else}-->{lang k_misign:sign}<!--{/if}--></i>
+				
+				<span class="nums">
+					{lang k_misign:row}{$qiandaodb['lasted']}{lang k_misign:days}
+				</span>
             </div>
-            <span class="nums">
-                {lang k_misign:row}{$qiandaodb['lasted']}{lang k_misign:days}
-            </span>
+            
             <div class="fblock">
                 <div class="all">
 					<i class="fa fa-user-o" aria-hidden="true"></i>
